- add ontology components - add index provider component - add AST visitor traversal GraphQL --> Ontology - add observability graphQL schema draft as samples - add additional service module for the RestHandler & endpoint support - add additional core module for the core graphQL manipulation and AST analysis  - add Intermediate Ontological Query Elements  - add GQL query anayzer  - add GQL to Query transformation builder
Signed-off-by: Lior Perry yang.db.dev@gmail.com
Signed-off-by: YANG-DB <yang-db-dev@gmail.com>